[gd_scene load_steps=7 format=3 uid="uid://cs7xrk28v8act"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_lbbsj"]
[ext_resource type="PackedScene" uid="uid://duux08b0j1brq" path="res://scenes/big_cube.tscn" id="2_vrqpa"]
[ext_resource type="Script" path="res://scenes/orbiting_camera.gd" id="3_imujc"]
[ext_resource type="Script" path="res://scenes/UI.gd" id="4_g6qdy"]
[ext_resource type="PackedScene" uid="uid://dfknx5u3yhl8y" path="res://scenes/color_map.tscn" id="5_3m2rh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s2t5a"]
albedo_color = Color(0.223529, 0.223529, 0.223529, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_lbbsj")

[node name="BigCube" parent="." instance=ExtResource("2_vrqpa")]

[node name="Pivot" type="Marker3D" parent="BigCube"]
rotation_edit_mode = 2
script = ExtResource("3_imujc")

[node name="Camera" type="Camera3D" parent="BigCube/Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6)

[node name="Light1" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, 0.5, 0.5, 0, 0.707107, -0.707107, -0.707107, 0.5, 0.5, 0, -2.58189, 10.3017)
sky_mode = 1

[node name="Light2" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, 0.5, -0.5, -10.8961, 0, -15.4989)
sky_mode = 1

[node name="TestCube" type="CSGBox3D" parent="."]
visible = false
size = Vector3(3, 3, 3)
material = SubResource("StandardMaterial3D_s2t5a")

[node name="C" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = 20.0
offset_right = -23.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="ColorMap" parent="C" instance=ExtResource("5_3m2rh")]
layout_mode = 2
size_flags_vertical = 4

[node name="Spacer" type="Control" parent="C"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="UI" type="VBoxContainer" parent="C"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10
script = ExtResource("4_g6qdy")

[node name="Grid" type="GridContainer" parent="C/UI"]
layout_mode = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 3

[node name="Sp" type="Control" parent="C/UI/Grid"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="U" type="Button" parent="C/UI/Grid"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
button_mask = 3
text = "U"

[node name="Sp2" type="Control" parent="C/UI/Grid"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="L" type="Button" parent="C/UI/Grid"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
button_mask = 3
text = "L"

[node name="F" type="Button" parent="C/UI/Grid"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
button_mask = 3
text = "F"

[node name="R" type="Button" parent="C/UI/Grid"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
button_mask = 3
text = "R"

[node name="Sp3" type="Control" parent="C/UI/Grid"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="D" type="Button" parent="C/UI/Grid"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
button_mask = 3
text = "D"

[node name="Sp4" type="Control" parent="C/UI/Grid"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Sp5" type="Control" parent="C/UI/Grid"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="B" type="Button" parent="C/UI/Grid"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
button_mask = 3
text = "B
"

[node name="Reset" type="Button" parent="C/UI"]
layout_mode = 2
text = "Reset"

[node name="Scramble" type="Button" parent="C/UI"]
layout_mode = 2
text = "Scramble"

[node name="Solve" type="Button" parent="C/UI"]
layout_mode = 2
text = "Solve"

[node name="CopyCube" type="Button" parent="C/UI"]
layout_mode = 2
text = "Copy Cube"

[node name="CopyMap" type="Button" parent="C/UI"]
layout_mode = 2
text = "Copy Map"
